//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  password Password
  nodes Node [not null]
}

Table Password {
  hash String [not null]
  user User [not null]
  userId String [unique, not null]
}

Table Group {
  id Int [pk, increment]
  name String [unique, not null]
  nodes Node [not null]
}

Table Field {
  id Int [pk, increment]
  name String [unique, not null]
  nodes Node [not null]
}

Table TimePeriod {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  startDate String [not null]
  endDate String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  nodes Node [not null]
}

Table GeographicalArea {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  nodes Node [not null]
}

Table ModernCountryArea {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  nodes Node [not null]
}

Table Node {
  id Int [pk, increment]
  title String [not null]
  body String [not null]
  group Group [not null]
  field Field [not null]
  timePeriods TimePeriod [not null]
  areas GeographicalArea [not null]
  countries ModernCountryArea [not null]
  eventDateStart String
  eventDateEnd String
  url String
  sourceLinks Links [not null]
  targetLinks Target [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
}

Table Links {
  id Int [pk, increment]
  sourceId Int [not null]
  source Node [not null]
  targets Target [not null]
  value Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Target {
  id Int [pk, increment]
  targetId Int [not null]
  linkId Int [not null]
  link Links [not null]
  node Node [not null]
}

Ref: Password.userId - User.id [delete: Cascade]

Ref: Node.userId > User.id [delete: Cascade]

Ref: Links.sourceId > Node.id

Ref: Target.linkId > Links.id

Ref: Target.targetId > Node.id